@@ -115,14 +115,14 @@ QString VCommonSettings::StandardTablesPath() const
 //---------------------------------------------------------------------------------------------------------------------
 QString VCommonSettings::GetPathIndividualMeasurements() const
 {
-    QSettings settings(this->format(), this->scope(), this->organizationName());
+    QSettings settings(this->format(), this->scope(), this->organizationName(), "common");
     return settings.value(SettingPathsIndividualMeasurements, QDir::homePath()).toString();
 }
 
 //---------------------------------------------------------------------------------------------------------------------
 void VCommonSettings::SetPathIndividualMeasurements(const QString &value)
 {
-    QSettings settings(this->format(), this->scope(), this->organizationName());
+    QSettings settings(this->format(), this->scope(), this->organizationName(), "common");
     settings.setValue(SettingPathsIndividualMeasurements, value);
     settings.sync();
 }
@@ -130,14 +130,14 @@ void VCommonSettings::SetPathIndividualMeasurements(const QString &value)
 //---------------------------------------------------------------------------------------------------------------------
 QString VCommonSettings::GetPathStandardMeasurements() const
 {
-    QSettings settings(this->format(), this->scope(), this->organizationName());
+    QSettings settings(this->format(), this->scope(), this->organizationName(), "common");
     return settings.value(SettingPathsStandardMeasurements, StandardTablesPath()).toString();
 }
 
 //---------------------------------------------------------------------------------------------------------------------
 void VCommonSettings::SetPathStandardMeasurements(const QString &value)
 {
-    QSettings settings(this->format(), this->scope(), this->organizationName());
+    QSettings settings(this->format(), this->scope(), this->organizationName(), "common");
     settings.setValue(SettingPathsStandardMeasurements, value);
     settings.sync();
 }
@@ -146,14 +146,14 @@ void VCommonSettings::SetPathStandardMeasurements(const QString &value)
 //---------------------------------------------------------------------------------------------------------------------
 QString VCommonSettings::GetPathTemplate() const
 {
-    QSettings settings(this->format(), this->scope(), this->organizationName());
+    QSettings settings(this->format(), this->scope(), this->organizationName(), "common");
     return settings.value(SettingPathsTemplates, TemplatesPath()).toString();
 }
 
 //---------------------------------------------------------------------------------------------------------------------
 void VCommonSettings::SetPathTemplate(const QString &value)
 {
-    QSettings settings(this->format(), this->scope(), this->organizationName());
+    QSettings settings(this->format(), this->scope(), this->organizationName(), "common");
     settings.setValue(SettingPathsTemplates, value);
     settings.sync();
 }
